--- a/RentCar/templates/RentCar/info_auto.html
+++ b/RentCar/templates/RentCar/info_auto.html
@@ -131,48 +131,127 @@
     {% endif %}
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-      aria-labelledby="staticBackdropLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
 
-          <div class="modal-header">
-            <h5 style="font-size: 27px; font-weight: bold;" class="modal-title" id="staticBackdropLabel">Elija sus condiciones</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
+        <div class="modal-header">
+          <h5 style="font-size: 27px; font-weight: bold;" class="modal-title" id="staticBackdropLabel">Elija sus
+            condiciones</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
 
-          <div class="modal-body">
-            <form action="" method="GET" class="formulario" id="formulario">
-              <!--Fecha de inicio-->
-              <div class="form-group">
-                <label for="inicio">Fecha de inicio: </label>
-                <input type="date" class="formulario-input" name="inicio" id="inicio" required>
-              </div>
-              <!--Fecha de termino-->
-              <div class="form-group">
-                <label for="termino">Fecha de término: </label>
-                <input type="date" class="formulario-input" name="termino" id="termino" required>
-              </div>
-              <!--Terminos y condiciones-->
-              <div class="form-group">
-                <label style="font-size: 15px;">
-                  <input class="formulario-chekbox" type="checkbox" name="terminos" id="terminos" required>
-                  <a style="color:rgb(255, 174, 0) ;" href="http://127.0.0.2:5501/Pagina.info/Pag.info.html" target="_blank" > Acepto los terminos y condiciones </a>
-                </label>
-              </div>
+        <div class="modal-body">
+          <form action="{% url 'registraOrdenV2' %}" method="POST" class="registraOrdenV2" id="registraOrdenV2">
+            {% csrf_token %}
 
-              <div class="modal-footer">
-                <!--Cancelar y enviar-->
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-                <button style="background-color: rgb(255, 174, 0);" type="submit" class="btn btn-primary"
-                  id="enviar">Enviar</button>
-                  <p class="error" id="error"></p>
-                  <p class="correcto" id="correcto"></p>
-              </div>
-            </form>
-          </div>
+            <!--Fecha de el dia de la reserva-->
+            <div class="form-group">
+              <label for="reserva">Fecha de la reserva: </label>
+              <input type="date" class="formulario-input" name="reserva" id="reserva" required>
+            </div>
+            <!--Fecha de inicio-->
+            <div class="form-group">
+              <label for="inicio">Fecha de inicio: </label>
+              <input type="date" class="formulario-input" name="inicio" id="inicio" required>
+            </div>
+            <!--Fecha de termino-->
+            <div class="form-group">
+              <label for="termino">Fecha de término: </label>
+              <input type="date" class="formulario-input" name="termino" id="termino" required>
+            </div>
+            <input class="controls" ype="text" name="nro_documento" id="nro_documento" placeholder="Numero de documento"
+              required>
+            <input class="controls" type="hidden" name="ruttt" id="ruttt" placeholder="Rut o pasaporte"
+              value="{{user.username}}" required>
+            <input class="controls" type="hidden" name="patentee" id="patentee" placeholder="Patente del vehiculo"
+              value="{{vehiculo.patente}}">
+            <input class="controls" type="hidden" name="status" id="status" placeholder="status" value="1">
+            <input class="controls" type="number" name="precio" id="precio" placeholder="Precio" required>
+            <!--Terminos y condiciones-->
+            <div class="form-group">
+              <label style="font-size: 15px;">
+                <input class="formulario-chekbox" type="checkbox" name="terminos" id="terminos" required>
+                <a style="color:rgb(255, 174, 0) ;" href="/RentCar/templates/RentCar/Pag_info.html" target="_blank">
+                  Acepto los terminos y condiciones </a>
+              </label>
+            </div>
+            <script>
+             
+              function isValidDate(day, month, year) {
+                var dteDate;
+                month = month - 1;
+                dteDate = new Date(year, month, day);
+                return ((day == dteDate.getDate()) && (month == dteDate.getMonth()) && (year == dteDate.getFullYear()));
+              }
+
+              /**
+               * Funcion para validar una fecha
+               * Tiene que recibir:
+               *  La fecha en formato español dd/mm/yyyy
+               * Devuelve:
+               *  true o false
+               */
+              function validate_fecha(fecha) {
+                var patron = new RegExp("^(19|20)+([0-9]{2})([-])([0-9]{1,2})([-])([0-9]{1,2})$");
+
+                if (fecha.search(patron) == 0) {
+                  var values = fecha.split("-");
+                  if (isValidDate(values[2], values[1], values[0])) {
+                    return true;
+                  }
+                }
+                return false;
+              }
+
+              function calcularDias() {
+                var fechaInicial = document.getElementById("inicio").value;
+                var fechaFinal = document.getElementById("termino").value;
+                var resultado = "";
+                if (validate_fecha(fechaInicial) && validate_fecha(fechaFinal)) {
+                  inicial = fechaInicial.split("-");
+                  final = fechaFinal.split("-");
+                  // obtenemos las fechas en milisegundos
+                  var dateStart = new Date(inicial[0], (inicial[1] - 1), inicial[2]);
+                  var dateEnd = new Date(final[0], (final[1] - 1), final[2]);
+
+                  if (dateStart < dateEnd) {
+                    // la diferencia entre las dos fechas, la dividimos entre 86400 segundos
+                    // que tiene un dia, y posteriormente entre 1000 ya que estamos
+                    // trabajando con milisegundos.
+                    var diasDif = dateEnd.getTime() - dateStart.getTime();
+                    resultado = "Dias trancurridos: " + (diasDif / 86400000) + " ";
+
+                  } else {
+                    alert("La fecha inicial es posterior a la fecha final");
+
+                  }
+                } else {
+                  if (!validate_fecha(fechaInicial))
+                    alert("La fecha inicial es incorrecta");
+                  if (!validate_fecha(fechaFinal))
+                    alert("La fecha final es incorrecta");
+                }
+                document.getElementById("resultado").innerHTML = resultado;
+
+              }
+            </script>
+
+            <div class="modal-footer">
+              <!--Cancelar y enviar-->
+              <input style="background-color: rgb(255, 174, 0);" type="button" class="btn btn-primary" value="Calcular dias" onclick="calcularDias();">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+              <button style="background-color: rgb(255, 174, 0);" type="submit" class="btn btn-primary"
+                id="enviar">Enviar</button>
+                <div id="resultado"></div>
+              <p class="error" id="error"></p>
+              <p class="correcto" id="correcto"></p>
+            </div>
+          </form>
         </div>
       </div>
     </div>
+  </div>
 
 </div>
 
