--- a/RentCar/templates/RentCar/base.html
+++ b/RentCar/templates/RentCar/base.html
@@ -14,6 +14,8 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"> </script>
+    
     <link rel="stylesheet" href="{% static 'RentCar/css/css_main_page/estilo.css' %}">
 
     <title>GODES</title>
@@ -117,7 +119,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-
+        
 </body>
 
 </html>
